# SMCComponents

./: .gitmodules  LICENSE  README.md  pyproject.toml  setup.py
smccomponents/: importance_sampling.py  tree.py  utils.py
smccomponents/resample/: continuous.py
smccomponents/resample/mpi/: ncopies.py  redistribution.py
smccomponents/resample/systematic/mpi/: prefix_sum.py  redistribution.py  resample.py  rotational_nearly_sort.py  rotational_split.py
tests/: test_mpi_systematic_resampling.py
